# payment

./: .gitignore  AGENT.md  Cargo.toml  README.md  dfx.json  plan.md
apps/dashboard/: .env.local.example  components.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/events/: route.ts
apps/dashboard/app/api/intents/: route.ts
apps/dashboard/app/api/intents/[id]/: route.ts
apps/dashboard/app/api/intents/[id]/capture/: route.ts
apps/dashboard/app/api/intents/[id]/refund/: route.ts
apps/dashboard/app/api/intents/[id]/release/: route.ts
apps/dashboard/app/events/: page.tsx
apps/dashboard/app/intents/: page.tsx
apps/dashboard/app/intents/[id]/: page.tsx
apps/dashboard/components/ui/: button.tsx  card.tsx  input.tsx  table.tsx
apps/dashboard/src/lib/ic/: agent.ts  payments.idl.ts
canisters/payments/: Cargo.toml  payments.did
canisters/payments/src/: lib.rs
