[package]
name = "payments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
blake3 = "1"
hex = "0.4"
once_cell = "1"
thiserror = "1"

[features]
export_candid = []

